services image file path issue fix

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="services-list">
                     <div class="services-item cards">
                         <div class="img-contain">
-                            <img src="/assets/img/service-air2.jpg" alt="" class="service-img">
+                            <img src="assets/img/service-air2.jpg" alt="" class="service-img">
                         </div>
 
                         <h4 class="service-heading">
@@ -144,7 +144,7 @@
                     </div>
                     <div class="services-item cards">
                         <div class="img-contain">
-                            <img src="/assets/img/service-ship1.jpg" alt="" class="service-img">
+                            <img src="assets/img/service-ship1.jpg" alt="" class="service-img">
                         </div>
 
                         <h4 class="service-heading">
@@ -157,7 +157,7 @@
                     </div>
                     <div class="services-item cards">
                         <div class="img-contain">
-                            <img src="/assets/img/service-road1.jpg" alt="" class="service-img">
+                            <img src="assets/img/service-road1.jpg" alt="" class="service-img">
                         </div>
 
                         <h4 class="service-heading">
